# NAMASTE-ICD-Terminology-Microservice

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
data/: namaste_sample.csv
docker/: Dockerfile
scripts/: ingest_namaste.py
src/app/: config.py  main.py  schema.py
src/app/db/: models.py  session.py
src/app/routes/: bundle_upload.py  codesystem.py  lookup.py  translate.py
src/app/security/: audit.py  auth.py
src/app/services/: icd11_client.py  mapping_service.py  namaste_loader.py
src/cli/: search_cli.py
tests/: test_bundle_upload.py  test_lookup.py  test_translate.py
